# imap-notifier

./: Cargo.toml  LICENSE  README.md
src/: main.rs
