[package]
name = "imap-notifier"
version = "0.1.0"
authors = ["Billy Rhoades <me@brod.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.9", features = [ "io-util", "io-std", "tcp" ] }

failure = "0.1.6"
log = "0.4"
pretty_env_logger = "0.3"

rustls = "0.16.0"
rustls-native-certs = "0.1.0"
webpki = "0.21.0"
webpki-roots = "0.18"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
tokio-rustls = "0.12"

futures-util = "0.3.1"
futures-core = "0.3.1"
futures = "0.3.1"

url = "2.1.1"
regex = "1"