[package]
name = "imap-notifier"
version = "0.1.0"
authors = ["Billy Rhoades <me@brod.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { features = [ "macros", "io-util", "io-std", "tcp", "rt-threaded" ] }

failure = "0.1.6"
slog = "2.5.2"
slog-term = "2.4.2"
slog-async = "2.3.0"
sloggers = "0.3.5"

rustls = "0.16.0"
rustls-native-certs = "0.1.0"
webpki = "0.21.0"
webpki-roots = "0.18"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
tokio-rustls = "0.12"

futures-util = "0.3.0"
futures-core = "0.3.0"
futures = "0.3.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

url = "2.1.1"
regex = "1"